--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
+    "shortid": "^2.2.16",
     "slugify": "^1.6.6",
     "string-strip-html": "^13.4.8"
   }
