--- a/backend/.env.copy
+++ b/backend/.env.copy
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=8000
 CLIENT_URL=http://localhost:3000
 DATABASE_URI=mongodb://127.0.0.1:27017/test
+JWT_SECRET=kjsadlfjalksdjfkasdjfkjiruj294u91832erkndc
