--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "next": "^14.2.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "reactstrap": "^9.2.2"
   },
   "scripts": {
     "dev": "next dev",
