--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "html-react-parser": "^5.1.12",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "^14.2.5",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
