--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "moment": "^2.30.1",
     "next": "^14.2.5",
     "nprogress": "^0.2.0",
+    "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
