--- a/backend/.env.copy
+++ b/backend/.env.copy
@@ -4,3 +4,10 @@ PORT=8000
 CLIENT_URL=http://localhost:3000
 DATABASE_URI=mongodb://127.0.0.1:27017/test
 JWT_SECRET=
+JWT_RESET_PASSWORD=
+EMAIL_FROM=
+EMAIL_TO=
+EMAIL_HOST="sandbox.smtp.mailtrap.io"
+EMAIL_PORT=2525
+EMAIL_USERNAME=""
+EMAIL_PASSWORD=""
