--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "shortid": "^2.2.16",
     "slugify": "^1.6.6",
