--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "html-react-parser": "^5.1.12",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^3.0.5",
