--- a/backend/.env.copy
+++ b/backend/.env.copy
@@ -11,3 +11,5 @@ EMAIL_HOST="sandbox.smtp.mailtrap.io"
 EMAIL_PORT=2525
 EMAIL_USERNAME=""
 EMAIL_PASSWORD=""
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
