--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-jwt": "^8.4.1",
     "express-validator": "^7.1.0",
     "formidable": "^1.2.1",
+    "google-auth-library": "^9.14.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.2",
